scaling and other issues

--- a/assets/css/projects-styles.css
+++ b/assets/css/projects-styles.css
@@ -2,6 +2,6 @@
 body {
     margin: 0;
     font-family: 'Arial', sans-serif;
-    background-color: #414073;
-    color: #70A37F;
+    background-color: #212842;
+    color: #F0E7D5;
 }
